--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "@discordjs/builders": "^1.10.0",
     "@discordjs/voice": "^0.17.0",
     "ascii-table": "^0.0.9",
+    "axios": "^1.7.9",
     "discord-player": "^6.7.1",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.5",
@@ -23,7 +25,9 @@
     "express": "^4.21.2",
     "glob": "^11.0.0",
     "libsodium-wrappers": "^0.7.15",
+    "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "node-osu": "^2.2.1",
     "play-audio": "^0.5.2",
     "play-dl": "^1.9.7",
     "ytdl-core": "^4.11.5",
