--- a/package.json
+++ b/package.json
@@ -15,21 +15,37 @@
   },
   "dependencies": {
     "@discordjs/builders": "^1.10.0",
+    "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.17.0",
+    "@distube/soundcloud": "^2.0.4",
+    "@distube/spotify": "^2.0.2",
+    "@distube/yt-dlp": "^2.0.1",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "ascii-table": "^0.0.9",
     "axios": "^1.7.9",
     "discord-player": "^6.7.1",
-    "discord.js": "^14.17.3",
+    "discord.js": "^14.18.0",
+    "distube": "^5.0.4",
     "dotenv": "^16.4.5",
+    "enkanetwork.js": "^2.10.5",
     "erela.js": "^2.4.0",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "glob": "^11.0.0",
     "libsodium-wrappers": "^0.7.15",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.12.0",
     "morgan": "^1.10.0",
     "node-osu": "^2.2.1",
+    "openai": "^4.80.1",
+    "opusscript": "^0.0.8",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "play-audio": "^0.5.2",
     "play-dl": "^1.9.7",
+    "puppeteer": "^24.3.0",
+    "sharp": "^0.33.5",
+    "tweetnacl": "^1.0.3",
     "ytdl-core": "^4.11.5",
     "ytsr": "^3.8.4"
   }
